1215_切版進行中

--- a/sass/base/_color.scss
+++ b/sass/base/_color.scss
@@ -1,7 +1,8 @@
 $brown: #b57556;
 $green: #b3b960;
-$blue:#A0BCC8;
+$blue: #a0bcc8;
 $blue_dark: #204379;
-$blue_light:#DAE4F1;
-$pink:#D3C3B8;
-$pink_light:#E2D9D3;
+$blue_light: #dae4f1;
+$pink: #d3c3b8;
+$pink_light: #e2d9d3;
+$white: #fff;
