--- a/sass/style.scss
+++ b/sass/style.scss
@@ -11,6 +11,8 @@
 @import "layout/cactus";
 // page
 @import "page/index";
+// animation
+@import "animation/animation";
 
 body {
   font-family: "Noto Sans TC", sans-serif;
