--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,10 @@
 @import "base/color";
 // component
 @import "component/btn";
+@import "component/reward";
+@import "component/other";
+
+
 // layout
 @import "layout/cactus";
 // page
