--- a/sass/page/_index.scss
+++ b/sass/page/_index.scss
@@ -3,21 +3,16 @@
   // outline: 1px solid red;
 }
 
-// 泡泡
-.bubble {
-  border: 1px solid $white;
-  border-radius: 50%;
-}
-
 .red {
   color: $brown;
   margin-left: 4px;
 }
 
+// #########################
 // 1.標題
 .top_banner {
   height: 634px;
-  background-image: url("../images/waves.png");
+  background-image: url("../images/bg_waves.png");
   background-size: 4784px 586px;
   background-position: center;
   background-color: $blue_dark;
@@ -75,25 +70,35 @@
   margin-top: 81px;
   margin-bottom: 58px;
 
-  .title{
+  .title {
     position: absolute;
+    color: $brown;
     background-color: $white;
     width: 123px;
     height: 43px;
-    color: $brown;
     border: 2px solid $brown;
     border-radius: 50px;
     transform: translateY(-50%);
     text-align: center;
+    line-height: 36px;
+    letter-spacing: 0.2em;
+    font-weight: 700;
+
+    .turtle {
+      position: absolute;
+      right: -45px;
+      top: -10px;
+    }
   }
 
-  .turtle{
-    position: absolute;
-    right: 0;
-  }
-
-  .lottery_submit{
+  .lottery_submit {
     margin-top: 40px;
+    box-shadow: 0px 4px 10px rgba(40, 35, 35, 0.35),
+      0px -4px 10px rgba(255, 255, 255, 0.9);
+
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   #lottery {
@@ -116,22 +121,12 @@
   }
 }
 
-input,
-select {
-  width: 100%;
-  height: 57px;
-  border: 1px solid $blue_dark;
-  border-radius: 20px;
-  margin-bottom: 20px;
-
-  &::placeholder {
-    color: $placeholder;
-    padding-left: 16px;
-  }
-}
-
 // 4.獎項
 .lottery_info {
+  background-image: url("../images/bg_sand.png");
+  background-position: center;
+  width: 100%;
+  height: 600px;
 }
 
 // 5.燈塔
@@ -140,6 +135,12 @@ select {
 
 // 6.商城
 .market {
+  background-color: $blue_dark;
+  width: 100%;
+  height: 800px;
+
+  .market_pad {
+  }
 }
 
 // 動畫相關
@@ -154,18 +155,6 @@ select {
     right: 0;
     left: 0;
     bottom: 0;
-  }
-
-  .bubble_s {
-    position: absolute;
-    width: 12px;
-    height: 12px;
-  }
-
-  .bubble_m {
-    position: absolute;
-    width: 20px;
-    height: 20px;
   }
 
   .top_boat {
