--- a/sass/page/_index.scss
+++ b/sass/page/_index.scss
@@ -126,7 +126,17 @@
   background-image: url("../images/bg_sand.png");
   background-position: center;
   width: 100%;
-  height: 600px;
+  padding: 40px 24px;
+  
+  .lottery_box {
+    width: 598px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 20px;
+    row-gap: 50px;
+    justify-items: center;
+  }
 }
 
 // 5.燈塔
