--- a/sass/page/_index.scss
+++ b/sass/page/_index.scss
@@ -30,7 +30,7 @@
   }
 
   .info {
-    width: 808px;
+    max-width: 808px;
     position: relative;
     align-items: stretch;
     background-color: $blue_light;
@@ -102,10 +102,11 @@
   }
 
   #lottery {
+    width: 100%;
+    max-width: 808px;
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    width: 808px;
     padding: 40px 20px;
     background: $white;
     border: 2px solid $brown;
@@ -127,9 +128,9 @@
   background-position: center;
   width: 100%;
   padding: 40px 24px;
-  
+
   .lottery_box {
-    width: 598px;
+    max-width: 598px;
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -141,15 +142,127 @@
 
 // 5.燈塔
 .tower {
+  width: 100%;
+  padding: 40px 24px;
+
+  .t_text_box {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding-bottom: 20px;
+    font-weight: 700;
+
+    .t_text {
+      line-height: 140%;
+      margin: 0 9px;
+      height: 84px;
+      span {
+        color: $brown;
+        font-size: 20px;
+      }
+
+      h4 {
+        width: 216px;
+        color: $blue_dark;
+      }
+    }
+
+    .line {
+      border: 1px solid $blue_dark;
+      width: 1px;
+      height: 75px;
+    }
+
+    .t_line_l {
+      transform: rotate(-15deg);
+    }
+
+    .t_line_r {
+      transform: rotate(15deg);
+    }
+  }
 }
 
 // 6.商城
 .market {
   background-color: $blue_dark;
+  border-radius: 50px 50px 0 0;
+  padding: 40px 19px;
   width: 100%;
-  height: 800px;
+
+  .market_title {
+    width: 303px;
+    margin: 0 auto;
+    padding-bottom: 24px;
+
+    h4 {
+      color: $white;
+      text-align: center;
+      letter-spacing: 0.2em;
+      line-height: 200%;
+    }
+  }
 
   .market_pad {
+    background-image: url("../images/m_market.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin: 0 auto;
+    padding: 23px 28px 38px;
+    width: 376px;
+    height: 493px;
+
+    h2 {
+      color: $brown;
+      font-weight: 900;
+      letter-spacing: 0.2em;
+      line-height: 200%;
+      margin-top: 53px;
+    }
+
+    p {
+      color: $blue;
+      line-height: 200%;
+      letter-spacing: 0.2em;
+      margin-left: 16px;
+    }
+
+    .m_text li {
+      display: flex;
+      align-items: center;
+      margin-bottom: 17px;
+    }
+
+    .m_icon {
+      display: flex;
+      flex-wrap: wrap;
+      align-content: space-between;
+      justify-content: space-between;
+      width: 180px;
+      height: 180px;
+
+      img {
+        width: 80px;
+        height: 80px;
+      }
+    }
+  }
+}
+
+.m_circle {
+  display: flex;
+  margin: 34px 0 10px;
+  li {
+    background-color: $circle_gray;
+    width: 5px;
+    height: 5px;
+    opacity: 0.5;
+    border-radius: 50%;
+
+    margin: 0 4px;
+  }
+  .m_circle_n {
+    opacity: 1;
   }
 }
 
