--- a/sass/component/_btn.scss
+++ b/sass/component/_btn.scss
@@ -1,12 +1,56 @@
 .btn {
-  background-color: $brown;
-  color: $white;
+  position: relative;
   width: 200px;
   height: 57px;
+  color: $white;
+  font-weight: 700;
+  letter-spacing: 0.2em;
   border: none;
   border-radius: 50px;
   box-shadow: 0px 0px 20px rgba(250, 163, 163, 0.91);
-  letter-spacing: 0.2rem;
-  font-weight: 700;
-  z-index: 10;
+  z-index: 1;
+  cursor: pointer;
+
+  &:before {
+    content: "";
+    position: absolute;
+    background: $brown;
+    width: 100%;
+    height: 100%;
+    border-radius: 50px;
+    left: 0;
+    top: 0;
+    z-index: -1;
+  }
+}
+
+// 套彩虹
+.rainbow_btn {
+  &:after {
+    content: "";
+    position: absolute;
+    background: linear-gradient(
+      124deg,
+      #ff2400,
+      #e81d1d,
+      #e8b71d,
+      #e3e81d,
+      #1de840,
+      #1ddde8,
+      #2b1de8,
+      #dd00f3,
+      #dd00f3
+    );
+    background-size: 400%;
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    border-radius: 50px;
+    filter: blur(5px);
+    opacity: 1;
+    left: -2px;
+    top: -2px;
+    z-index: -2;
+    transition: all 0.3s ease-in-out;
+    animation: rainbow 20s linear infinite;
+  }
 }
