1217_暫定煙火動畫

--- a/sass/page/_index.scss
+++ b/sass/page/_index.scss
@@ -66,9 +66,8 @@
   margin-top: -2px;
 
   img {
-    width: 100%;
+    width: 1564px;
     animation: wave 15s linear infinite;
-    border: none;
     margin-left: -2px;
   }
 }
@@ -135,7 +134,7 @@
   background-image: url("../images/bg_sand.png");
   background-position: center;
   width: 100%;
-  padding: 40px 24px;
+  padding: 64px 24px 40px;
 
   .lottery_box {
     max-width: 598px;
