--- a/sass/animation/_animation.scss
+++ b/sass/animation/_animation.scss
@@ -49,6 +49,21 @@
   }
 }
 
+@keyframes fireworks {
+  0% {
+    transform: scale(0);
+  }
+  80% {
+    transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(0);
+
+  }
+}
+
+
 // 改用JS
 .bubble {
   left: 0;
@@ -65,7 +80,12 @@
         left: #{(-5 * $i) + ($range * 5) + "%"};
       }
       animation: bubble linear #{random(30) + 10 + s} infinite;
-      animation-delay: #{$i * random(10) * 0.1 + s};
     }
   }
+}
+
+.fireworks {
+  z-index: 10;
+  position: absolute;
+  animation: fireworks 2s infinite;
 }
