--- a/sass/animation/_animation.scss
+++ b/sass/animation/_animation.scss
@@ -49,6 +49,7 @@
   }
 }
 
+// 煙火
 @keyframes fireworks {
   0% {
     transform: scale(0);
@@ -59,10 +60,21 @@
   100% {
     opacity: 0;
     transform: scale(0);
-
   }
 }
 
+// 船槳
+@keyframes paddle {
+  0% {
+    transform: rotate(35deg);
+  }
+  50% {
+    transform: rotate(-45deg);
+  }
+  100% {
+    transform: rotate(35deg);
+  }
+}
 
 // 改用JS
 .bubble {
@@ -82,10 +94,4 @@
       animation: bubble linear #{random(30) + 10 + s} infinite;
     }
   }
-}
-
-.fireworks {
-  z-index: 10;
-  position: absolute;
-  animation: fireworks 2s infinite;
 }
