--- a/sass/page/_index.scss
+++ b/sass/page/_index.scss
@@ -8,6 +8,47 @@
   margin-left: 4px;
 }
 
+// 錯誤訊息
+.wrong_msg {
+  position: absolute;
+  color: red;
+  left: 0;
+  bottom: -5px;
+}
+
+// 泡泡
+.bubble {
+  position: absolute;
+  border: 1px solid $white;
+  border-radius: 50%;
+}
+
+.bubble_s {
+  width: 12px;
+  height: 12px;
+}
+
+.bubble_m {
+  width: 20px;
+  height: 20px;
+}
+
+// 表單輸入欄
+input,
+select {
+  width: 100%;
+  height: 57px;
+  border: 1px solid $blue_dark;
+  border-radius: 20px;
+  margin-bottom: 20px;
+  padding-left: 16px;
+  appearance: none;
+
+  &::placeholder {
+    color: $placeholder;
+  }
+}
+
 // #########################
 // 1.標題
 .top_banner {
@@ -89,10 +130,19 @@
   animation: paddle 3s infinite;
 }
 
+// 煙火旁邊的船
+.bottom_boat {
+  position: absolute;
+  left: 38px;
+  bottom: -49px;
+  z-index: 10;
+}
+
 // 煙火
 .fireworks {
   z-index: 10;
   position: absolute;
+
   animation: fireworks 2s infinite;
 }
 
@@ -104,8 +154,9 @@
 
   img {
     width: 1564px;
-    animation: wave 15s linear infinite;
     margin-left: -2px;
+
+    animation: wave 15s linear infinite;
   }
 }
 
@@ -127,6 +178,8 @@
     line-height: 36px;
     letter-spacing: 0.2em;
     font-weight: 700;
+
+    z-index: 10;
 
     .turtle {
       position: absolute;
@@ -162,6 +215,16 @@
     }
 
     div {
+      position: relative;
+    }
+
+    .select_arrow {
+      position: absolute;
+      right: 23px;
+      top: 45px;
+      border: solid;
+      border-width: 8px 6px 0px 6px;
+      border-color: $blue_dark transparent transparent transparent;
     }
   }
 }
@@ -308,19 +371,5 @@
   }
   .m_circle_n {
     opacity: 1;
-  }
-}
-
-// 動畫相關
-
-.info_bottom_animation {
-  /* 煙火 */
-  .fireworks {
-  }
-
-  .bottom_boat {
-    position: absolute;
-    left: 38px;
-    bottom: -49px;
   }
 }
