1218_Vue加入表單驗證

--- a/sass/page/_index.scss
+++ b/sass/page/_index.scss
@@ -49,6 +49,14 @@ select {
   }
 }
 
+// 隱藏 datalist 箭頭
+input::-webkit-calendar-picker-indicator {
+  display: none !important;
+}
+
+datalist {
+}
+
 // #########################
 // 1.標題
 .top_banner {
@@ -192,6 +200,8 @@ select {
     margin-top: 40px;
     box-shadow: 0px 4px 10px rgba(40, 35, 35, 0.35),
       0px -4px 10px rgba(255, 255, 255, 0.9);
+
+    animation: submit 1s infinite;
 
     &:hover {
       cursor: pointer;
