--- a/sass/animation/_animation.scss
+++ b/sass/animation/_animation.scss
@@ -75,6 +75,18 @@
     transform: rotate(35deg);
   }
 }
+// 按鈕縮放
+@keyframes submit {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
 
 // 改用JS
 .bubble {
