1219_測試隱藏safari箭頭

--- a/sass/page/_index.scss
+++ b/sass/page/_index.scss
@@ -63,6 +63,10 @@ select {
 }
 
 // 隱藏 datalist 箭頭
+select {
+  -webkit-appearance: none;
+}
+
 input::-webkit-calendar-picker-indicator {
   display: none !important;
 }
